# Generation-AI-Create

./: .gitignore  Untitled0.ipynb  database_handler.py  design.py  drinks.csv  drinks.lemon.csv  drinks.xlsx  example_vec.db  main.py  main2.py  openai_client.py  pyproject.toml  serializer.py  streamlit_interface.py  レモンプロンプト.txt
.devcontainer/: Dockerfile  devcontainer.json
